k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issues-handler-deployment
  namespace: my-system
  labels:
    app: issues-handler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issues-handler
  template:
    metadata:
      labels:
        app: issues-handler
    spec:
      containers:
        - name: issues-handler
          image: localhost/issues-handler:${APP_VERSION}
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
        - name: issues-mocks
          image: localhost/issues-mocks:${APP_VERSION}
          imagePullPolicy: Never
          ports:
            - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: issues-handler
  name: issues-handler
  namespace: my-system
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: issues-handler
  sessionAffinity: None
  type: ClusterIP
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: issues-handler
  namespace: my-system
  labels:
    app: issues-handler
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  hostnames:
  - "issues-handler.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: issues-handler
      port: 80
